# src/server.ts
@@ -1,16 +1,18 @@
 import 'dotenv/config';
 import App from './app';
-import AuthRoute from './routes/auth.route';
 import IndexRoute from './routes/index.route';
-import UsersRoute from './routes/users.route';
 import validateEnv from './utils/validateEnv';
+import ZombieRoute from './routes/zombies.route';
+import ItemsRoute from './routes/items.route';
+import RatesRoute from './routes/rates.route';
 
 validateEnv();
 
 const app = new App([
   new IndexRoute(),
-  new UsersRoute(),
-  new AuthRoute(),
+  new ZombieRoute(),
+  new ItemsRoute(),
+  new RatesRoute()
 ]);
 
 app.listen();
